# flight-tracker

./: README.md  docker-compose.yml
api/: .gitignore  Dockerfile  pyproject.toml
api/app/: database.py  main.py
api/app/features/: classes.py  crud.py  security.py
api/app/features/schema/: FieldDevice.py  Flight.py  Position.py  User.py  Velocity.py
api/app/routers/: altitude.py  inflight.py  live.py  logs.py  position.py  register.py  users.py  velocity.py
client/: package-lock.json  package.json
client/src/: App.js
client/src/components/: AltitudeChart.js  MapChart.js
client/src/pages/: Homepage.js  LiveViewPage.js
db/: .gitignore  database.sql  dockerfile
orangepi/: .gitignore  pyproject.toml  requirements.txt  setup  setup.sh  startup
orangepi/app/: main.py
orangepi/iPhone-gpsd/: iPhone-gpsd.py
